tests/ui/underscore-imports/shadow.stderr
error[E0599]: no method named `deref` found for reference `&()` in the current scope
  --> $DIR/shadow.rs:19:11
   |
LL |         x.deref();
   |           ^^^^^ method not found in `&()`
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `Deref` which provides `deref` is implemented but not in scope; perhaps you want to import it
   |
LL +     use std::ops::Deref;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
